--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
 baseURL: https://hugo-toha.github.io
 
-languageCode: bn
-title: "John's Blog"
+languageCode: fr
+title: "Portfolio d'Aurélien"
 
 # Use Hugo modules to add theme
 module:
@@ -20,18 +20,18 @@ module:
 # Manage languages
 # For any more details, you can check the official documentation: https://gohugo.io/content-management/multilingual/
 languages:
-  en:
-    languageCode: en
-    languageName: English
-    title: "John's Blog"
+  fr:
+    languageCode: fr
+    languageName: Français
+    title: "Portfolio d'Aurélien"
     weight: 1
-  bn:
-    languageCode: bn
-    languageName: বাংলা
-    title: জনের ব্লগ
-    weight: 2
+  # bn:
+  #   languageCode: bn
+  #   languageName: বাংলা
+  #   title: জনের ব্লগ
+  #   weight: 2
 # default language for the content
-defaultContentLanguage: en
+defaultContentLanguage: fr
 
 
 # Allow raw html in markdown file
@@ -64,10 +64,10 @@ params:
 
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
-  logo:
-    main: /images/site/main-logo.png
-    inverted: /images/site/inverted-logo.png
-    favicon: /images/site/favicon.png
+  # logo:
+  #   main: /images/site/main-logo.png
+  #   inverted: /images/site/inverted-logo.png
+  #   favicon: /images/site/favicon.png
 
   # GitHub repo of your site
   gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
@@ -88,19 +88,19 @@ params:
 
     # Configure theme color settings
     theme:
-      enable: true
+      enable: false
       services:
-        light: true # enable light theme. default "true"
+        light: false # enable light theme. default "true"
         dark: true # enable dark theme. default "true"
         default: system # can be either light, dark or system. default "system"
 
     # Enable and configure portfolio
     portfolio:
-      enable: true
+      enable: false
 
     # Enable and configure blog posts
     blog:
-      enable: true
+      enable: false
       showAuthor: true # shows the author of post (defaults true)
       # Share post on different social media
       shareButtons:
@@ -117,7 +117,7 @@ params:
 
     # Enable & configure "Notes" features
     notes:
-      enable: true
+      enable: false
 
     # Enable comment feature. There, should be only one of them.
     comment:
@@ -155,7 +155,7 @@ params:
 
     # Enable Analytics
     analytics:
-      enabled: true
+      enabled: false
       services:
         # Google Analytics
         google:
@@ -188,7 +188,7 @@ params:
 
     # specify whether you want to show Table of Contents in reading page
     toc:
-      enable: true
+      enable: false
 
     # Show tags under the post title
     tags:
@@ -281,7 +281,7 @@ params:
 
   # Provide footer configuration.
   footer:
-    enable: true
+    enable: false
     # You can provide your custom footer template using this option.
     # Put your template in "layouts/partials" folder of your repo.
     template: footer.html
