make theme default to dark

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -70,7 +70,7 @@ params:
   #   favicon: /images/site/favicon.png
 
   # GitHub repo of your site
-  gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
+  gitRepo: https://github.com/ogerpon-h/hugo-toha
   # Default branch of your Git repo
   gitBranch: main
 
@@ -92,7 +92,7 @@ params:
       services:
         light: false # enable light theme. default "true"
         dark: true # enable dark theme. default "true"
-        default: system # can be either light, dark or system. default "system"
+        default: dark # can be either light, dark or system. default "system"
 
     # Enable and configure portfolio
     portfolio:
