--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: ogerpon-h.github.io/hugo-toha
+baseURL: hugo-toha.github.io
 
 languageCode: fr
 title: "Portfolio d'Aurélien"
@@ -60,7 +60,7 @@ params:
   # Background image of the landing page
   background: /images/site/background.jpg
   # Background image of the landing page for dark theme
-  darkBackground: /images/site/background.jpg
+  #darkBackground: /images/site/background.jpg
 
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
