--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -1,10 +1,9 @@
-name: Build Hugo Site with Mise
+name: Build and Deploy Hugo Site with Mise and GitHub Pages
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   build:
@@ -22,13 +21,20 @@ jobs:
       - name: Install tools with Mise
         run: mise install
 
-      # If your repo defines a build script in .mise.toml:
       - name: Build site
         run: mise run build
 
-      # If you need to upload the built site as an artifact:
-      - name: Upload public folder as artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: hugo-public
           path: public
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    # Deploy to GitHub Pages using the official action
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
