--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write   
+  pages: write      
+  actions: read     
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,7 +38,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
 
-    # Deploy to GitHub Pages using the official action
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
