--- a/data/fr/site.yaml
+++ b/data/fr/site.yaml
@@ -26,4 +26,4 @@ openGraph:
   type: website
   description: Portfolio d'Aurélien Soula.
   image: images/author/aurelien-soula.jpg
-  url: https://hugo-toha.github.io
+  url: https://ogerpon-h.github.io/hugo-toha/
