--- a/data/fr/author.yaml
+++ b/data/fr/author.yaml
@@ -2,7 +2,7 @@
 name: "Aurélien Soula"
 nickname: "Aurélien"
 # greeting message before your name. it will default to "Hi! I am" if not provided
-greeting: "Bonjour ! je suis"
+greeting: "Bonjour ! Je suis"
 image: "images/author/aurelien-soula.jpg"
 # give your some contact information. they will be used in the footer
 # contactInfo:
