--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://ogerpon-h.github.io/hugo-toha
+baseURL: https://ogerpon-h.github.io
 languageCode: fr
 title: "Portfolio d'Aurélien Soula"
 
