--- a/data/fr/sections/projects.yaml
+++ b/data/fr/sections/projects.yaml
@@ -9,8 +9,17 @@ section:
   # hideTitle: true
 
 
-# your projects
+#projects:
 projects:
+- name: Pokémon Team List Creator
+  logo: /images/sections/projects/PokémonTeamListCreatorNoText.png
+  role: Contributeur
+  timeline: "Janvier 2024 - Mars 2024"
+  repo: https://github.com/DhSufi/PokemonTeamListCreator
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: Contribution à un projet visant à générer des feuilles d'équipe pour les tournois locaux de Pokémon compétitif. Ma contribution à consister à ajouter une option pour avoir plusieurs langues sur la même feuille d'équipe.
+  tags: ["Personnel", "JavaScript"]
+
 - name: Project F.S
   logo: /images/sections/projects/Project F.S.png
   role: Développer
