Add OCR project

--- a/data/fr/sections/projects.yaml
+++ b/data/fr/sections/projects.yaml
@@ -22,10 +22,15 @@ projects:
 
 - name: Project F.S
   logo: /images/sections/projects/Project F.S.png
-  role: Développer
+  role: Développeur
   timeline: "Septembre 2024 - Mai 2025"
   repo: https://github.com/gauthier-past2/Project-F.S
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Projet de première année à l'EPITA où j'ai créer un jeu vidéo de type FPS, Project F.S, en C# sur Unity en groupe avec 3 autres étudiants.
   tags: ["EPITA", "C#", "Unity", "git"]
 
+- name: OCR
+  role: Développeur
+  timeline: "Septembre 2025 - Présent"
+  summary: Réalisation d'un programme écrit en C capable de résoudre une grille de mots mêlés lue grâce à un réseau de neurones dans le cadre du projet de troisième semestre à l'EPITA.
+  tags: ["EPITA", "C", "git"]
