--- a/data/fr/author.yaml
+++ b/data/fr/author.yaml
@@ -1,8 +1,8 @@
 # some information about you
 name: "Aurélien Soula"
-nickname: "Aurélien"
+nickname: "Aurélien Soula"
 # greeting message before your name. it will default to "Hi! I am" if not provided
-greeting: "Bonjour ! Je suis"
+greeting: ""
 image: "images/author/aurelien-soula3.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
@@ -13,7 +13,8 @@ contactInfo:
 #   researchgate: john-doe
 
 # some summary about what you do
-# summary:
+summary:
+   -  Élève ingénieur informatique à l'EPITA de Toulouse
 #   - I am a Developer
 #   - I am a Devops
 #   - I love servers
