--- a/data/fr/sections/achievements.yaml
+++ b/data/fr/sections/achievements.yaml
@@ -1,6 +1,6 @@
 # section information
 section:
-  name: Achievements
+  name: Distinctions
   id: achievements
   enable: false
   weight: 10
@@ -10,15 +10,6 @@ section:
 
 # Your achievements achievements
 achievements:
-- title: Best Presenter
-  image: /images/sections/achievements/presenter.jpg
-  summary: Best presenter in the 2020 XYZ conference.
-- title: Champion
-  image: /images/sections/achievements/sport.jpg
-  summary: Champion in cycling inter-city cycling championship 2020.
-- title: Graduation
-  image: /images/sections/achievements/graduation-cap.jpg
-  summary: Received Bachelor of Science (B.Sc.) in Computer Science and Engineer from XYZ University.
-- title: Award Winner
-  image: /images/sections/achievements/woman-winner.jpg
-  summary: Wined best paper award at IEE Conference 2020.
+- title: Vice-champion international Pokémon 
+  image: /images/sections/achievements/naic_finals.png
+  summary: Vice-champion de l'international d'amérique du nord 2024.
